--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>날마다 읽는 교리 | 오직 하나님께만 드려야 할 예배</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css" />
+    <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendevilard@v1.3.9/dist/web/static/pretendard.min.css" />
     <style>
         body {
             font-family: 'Pretendard', sans-serif;
@@ -72,8 +72,7 @@
                     <h2><span class="ml-4 text-2xl font-bold text-slate-700">신앙고백서 21장 2항: 원문</span></h2>
                 </div>
                 <blockquote class="mt-4 p-4 border-l-4 border-slate-200 bg-slate-50 text-gray-700">
-                    <p class="mb-2"><strong>문:</strong> 우리는 누구에게 예배해야 합니까?</p>
-                    <p class="font-semibold"><strong>답:</strong> 경건한 예배는 성부, 성자, 성령 하나님께 드려야 한다. 천사나 성인(聖人)이나 어떤 다른 피조물에게 드려서는 안 되며 오직 하나님께만 드려야 한다. 타락한 이후에는 중보자 없이 드려서도 안 되며, 그리스도 외 다른 중보자를 통해 드려서도 안 된다.</p>
+                    <p class="leading-relaxed font-semibold">경건한 예배는 성부, 성자, 성령 하나님께 드려야 한다. 천사나 성인(聖人)이나 어떤 다른 피조물에게 드려서는 안 되며 오직 하나님께만 드려야 한다. 타락한 이후에는 중보자 없이 드려서도 안 되며, 그리스도 외 다른 중보자를 통해 드려서도 안 된다.</p>
                 </blockquote>
             </section>
 
